--- a/Buoi2/Bai2/Canhan/style.css
+++ b/Buoi2/Bai2/Canhan/style.css
@@ -29,7 +29,9 @@ body {
     flex-direction: column;
 }
 
-#name {
+
+
+.fristname, .lastname {
     width: 180px;
     border-radius: 5px;
     background: #e6e6e6a2;
@@ -44,7 +46,7 @@ body {
     display: flex;
     flex-direction: row;
     gap: 10px;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
     font-size: 15px;
     line-height: 16px;
@@ -63,7 +65,8 @@ body {
 }
 
 .sdtemail {
-    margin-bottom: 10px;
+    margin-top: 10px;
+    
     padding: 10px;
     font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
     font-size: 15px;
@@ -72,6 +75,7 @@ body {
 
 
 .password {
+    margin-top: 10px;
     width: 370px;
     border-radius: 5px;
     height: 40px;
